--- a/Privont/Views/LeadInfo/Index.cshtml
+++ b/Privont/Views/LeadInfo/Index.cshtml
@@ -11,6 +11,14 @@
     .theme-primary .select2-container--default.select2-container--open {
         z-index: 9999;
     }
+    .progress {
+        display: flex;
+        height: 2rem;
+        overflow: hidden;
+        font-size: 0.75rem;
+        background-color: #e9ecef;
+        border-radius: 0.25rem;
+    }
 </style>
 <div class="content-wrapper">
     <div class="container-full">
@@ -25,11 +33,14 @@
                             New
                         </button>
                         <button type="button" class="btn btn-info btn-sm pull-right" data-bs-toggle="modal" data-bs-target="#modal-fill" style="margin:.0 5px;">
-                            Upload Lead
+                            Upload Leads
                         </button>
                         <button type="button" class="btn btn-primary btn-sm pull-right" data-bs-toggle="modal" data-bs-target="#modal-fill-api" style="margin:.0 5px;">
-                            Sync Lead From Apis
+                            Sync Leads (APIs)
                         </button>
+                        @*<button type="button" class="btn btn-primary btn-sm pull-right" onclick="OpenModal()" style="margin:.0 5px;">
+                            OpenModal
+                        </button>*@
                     </div>
                     <h4 class="text-danger">@ViewBag.Message</h4>
                     <!-- /.box-header -->
@@ -41,7 +52,7 @@
                                         <th>
                                             Name
                                         </th>
-                                        
+
                                         <th>
                                             Phone No
                                         </th>
@@ -233,8 +244,8 @@ Where LeadClaimInfo.LEadID= {item.LeadID}");
                                                         </button>
                                                     }
                                                     @*<button id="@item.LeadID" onclick="DeleteButtonclicked(this)" type="button" class="m-1 btn btn-danger  btn-sm me-1">
-                    <i class="fa fa-close"></i>
-                </button>*@
+                                                            <i class="fa fa-close"></i>
+                                                        </button>*@
                                                 </td>
 
                                             }
@@ -289,14 +300,14 @@ Where LeadClaimInfo.LEadID= {item.LeadID}");
     </div>
 </div>
 
-<div class="modal modal-fill fade" data-backdrop="false" id="modal-fill-api" tabindex="-1">
+<div class="modal center-modal fade" data-backdrop="false" id="modal-fill-api" tabindex="-1">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content modal-lg">
             <div class="modal-header">
                 <h5 class="modal-title">Sync Lead</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body modal-lg">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
@@ -309,8 +320,9 @@ Where LeadClaimInfo.LEadID= {item.LeadID}");
                     </div>
                 </div>
                 <div class="modal-footer pull-right">
-                    <button type="button" class="btn btn-danger float-end" data-bs-dismiss="modal">Close</button>
-                    <input type="button" onclick="SyncApiData()" value="Sync Lead" class="btn btn-primary" />
+                    <input type="button" onclick="SyncApiData()" value="Sync Lead" class="btn btn-primary pull-right" />
+
+                    <button type="button" class="btn btn-danger pull-right" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
@@ -336,8 +348,9 @@ Where LeadClaimInfo.LEadID= {item.LeadID}");
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger float-end" data-bs-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary float-end" onclick="PricePointSave()">Save changes</button>
+
+                <button type="button" class="btn btn-danger float-end" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
@@ -374,6 +387,24 @@ Where LeadClaimInfo.LEadID= {item.LeadID}");
         </div>
     </div>
 </div>
+<div class="modal center-modal fade" data-backdrop="false" id="modalProgressBar" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content modal-lg">
+            <div class="modal-body modal-lg">
+                <br />
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-primary progress-bar-striped" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                <span id="ProgressbarCount" style="font-size:medium">Loading Please Wait!</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <!-- /.modal -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
@@ -383,26 +414,7 @@ Where LeadClaimInfo.LEadID= {item.LeadID}");
         var value = obj;
         $("#LeadID").val(value);
     }
-    function SyncApiData() {
-        var SourceID = $("#ApiLeadID").val();
-        $.ajax({
-            url:'/GeneralApis/GetSourceOfAPILeadIndex',
-            type: 'POST',
-            dataType: 'json',
-            async: false,
-            data: { SourceID },
-            success: function (r) {
-                var data = r.split(',');
-                if (data[0] == "true") {
-                    swal.fire("Success", "Syncing Data","Success");
-                } else {
-                    Swal.fire("", "Config Not Found Against This Source Please Add Config", "error");
-                    window.location.href = '/RealEstateAgentInfo/APIConfiguration';
-                    return;
-                }
-            }
-        });
-    }
+  
 
     function getClaimingLink(obj) {
         $.ajax({
@@ -430,12 +442,85 @@ Where LeadClaimInfo.LEadID= {item.LeadID}");
                 const token = encryptedData;
                 const token2 = encryptedData2;
                 var GeneratedLink = domainUrl + "/GeneralApis/Lead?" + 'q=' + token + '&d=' + @General.UserType + '&i=' +@General.UserID+ '&y=' + data[1] + '&s=' + token2;
-                alert(GeneratedLink);
-                $("#Claimbtn_" + obj).hide();
+                sendSMSLink(obj, GeneratedLink);
             }
         });
     }
 
+    function sendSMSLink(obj, GeneratedLink) {
+        $.ajax({
+            url: '/SMSSetting/SendSms',
+            type: 'POST',
+            dataType: 'json',
+            data: { LeadID: obj, Link: GeneratedLink },
+            success: function (r) {
+                var data = r.split(',');
+                if (data[0] == "true") {
+                    SendSMS(data[1], data[2], obj);
+                    /*                    alert(data[1]);*/
+                }
+                else if (data[0] == "1") {
+                    Swal.fire(
+                        '',
+                        'Your SMS Setting is not set please Set this First',
+                        'error'
+                    );
+                    window.location.href = '/SMSSetting/Index';
+                }
+            },
+            error: function () {
+                alert('error');
+            }
+        });
+    }
+
+    function SendSMS(message, PhoneNo, obj) {
+        alert("Working");
+        $.ajax({
+            url: '/SMSTrueDialog/SendPushCampaignAsync',
+            type: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify({ PhoneNo: PhoneNo, message: message }),
+            success: function (r) {
+                var data = r.split(',');
+                if (data[0] == "true") {
+                    Swal.fire(
+                        '',
+                        'Sms SuccessFully Send To Lead',
+                        'success'
+                    );
+                    $("#Claimbtn_" + obj).hide();
+                }
+            }
+        });
+    }    
+    //function sendSMS(message, PhoneNo,obj) {
+    //    var apiKey = "2a3026c04aef4826ab6bd59af941d29f";
+    //    var apiSecret = "Ex5?9Y&ti7T{";
+    //    var authHeader = btoa(apiKey + ":" + apiSecret);
+    //    var data = {
+    //        PhoneNumber: PhoneNo,
+    //        Message: message
+    //    };
+    //    $.ajax({
+    //        url: "https://api.truedialog.com/api/v1/sms",
+    //        type: "POST",
+    //        headers: {
+    //            "Authorization": "Basic " + authHeader
+    //        },
+    //        contentType: "application/json",
+    //        data: JSON.stringify(data),
+    //        success: function (response) {
+    //            // Handle the success response from the TrueDialog API
+    //            console.log("Message sent successfully!", response);
+    //            $("#Claimbtn_" + obj).hide();
+    //        },
+    //        error: function (xhr, textStatus, errorThrown) {
+    //            // Handle any errors that occur during the AJAX request
+    //            console.error("Error sending message:", textStatus, errorThrown);
+    //        }
+    //    });
+    //}
 
     function ClaimLead(object) {
         jQuery.ajax({
@@ -566,6 +651,58 @@ Where LeadClaimInfo.LEadID= {item.LeadID}");
                 )
             }
         })
+    }
+    let isThreadRunning = false;
+    $(document).ready(function () {
+        $('#modalProgressBar').modal({ backdrop: 'static', keyboard: false })  
+    });
+    function SyncInformation() {
+        var ApiSource = $("ApiLeadID").val();
+        $.ajax({
+            type: "POST",
+            url: "GetInfoSync",
+            data: JSON.stringify({ ApiSource }),
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            success: function (r) {
+                console.log(r);
+                $("#ProgressbarCount").text(r+"%");
+            },
+            error: function (x, e) {
+                Swal.fire("", "Progress");
+            },
+            async: false
+        });
+       
+    }
+    
+    function OpenModal() {
+        $("#modalProgressBar").modal('show');
+    }
+    function SyncApiData() {
+        var SourceID = $("#ApiLeadID").val();
+        setTimeout(function () {
+            $("#modalProgressBar").modal('show');
+            $("#modal-fill-api").modal('hide');
+        }, 50);
+        $.ajax({
+            url: 'GetSourceOfAPILeadIndex',
+            type: 'POST',
+            dataType: 'json',
+            async: true,
+            data: { UserID: @General.UserID,SourceID },
+            success: function (r) {
+                var data = r.split(',');
+                if (data[0] == "true") {
+                    swal.fire("Success", "Syncing Data", "Success");
+                    window.location.reload();
+                } else {
+                    Swal.fire("", "Config Not Found Against This Source Please Add Config", "error");
+                    window.location.href = '/RealEstateAgentInfo/APIConfiguration';
+                    return;
+                }
+            }
+        });
     }
 </script>
 
