--- a/Privont/Views/RealEstateAgentInfo/Index.cshtml
+++ b/Privont/Views/RealEstateAgentInfo/Index.cshtml
@@ -77,8 +77,8 @@
                                                     }
                                                     else if (item.IsApproved == false)
                                                     {
-                                                        <button type="button" id="btn_@item.RealEstateAgentId" class="open-modal btn-sm btn btn-primary pull-right" data-bs-toggle="modal" data-bs-target="#modal-fill" onclick="OpenLenderModal(@item.RealEstateAgentId)" style="margin:0 5px;">
-                                                            Approved
+                                                        <button type="button" id="btn_@item.RealEstateAgentId" class="open-modal btn-sm btn btn-warning pull-right" data-bs-toggle="modal" data-bs-target="#modal-fill" onclick="OpenLenderModal(@item.RealEstateAgentId)" style="margin:0 5px;">
+                                                            Approval Pending
                                                         </button>
                                                         <span style="display:none;" id="lbl_@item.RealEstateAgentId">
                                                             <span id="App_@item.RealEstateAgentId" class="small badge badge-success">Approved</span>
