--- a/Privont/Views/LenderInfo/Create.cshtml
+++ b/Privont/Views/LenderInfo/Create.cshtml
@@ -376,7 +376,7 @@
                     $("#LenderId").val(data[1]);
                 },
                 error: function (x, e) {
-                    Swal.fire("", "Saving Error");
+                    Swal.fire("", "Sending Email Error");
                 },
                 async: false
             });
