--- a/Privont/Views/LenderInfo/Signup.cshtml
+++ b/Privont/Views/LenderInfo/Signup.cshtml
@@ -537,7 +537,7 @@
                     $("#LenderId").val(data[1]);
                 },
                 error: function (x, e) {
-                    Swal.fire("", "Saving Error");
+                    Swal.fire("", "Error Sending Email","error");
                 },
                 async: false
             });
