--- a/Privont/Views/RealEstateAgentInfo/Create.cshtml
+++ b/Privont/Views/RealEstateAgentInfo/Create.cshtml
@@ -473,7 +473,7 @@
                     $("#RealEstateAgentId").val(data[1]);
                 },
                 error: function (x, e) {
-                    Swal.fire("", "Sending Email Error");
+                    Swal.fire("", "Sending Email Error","error");
                 },
                 async: false
             });
