--- a/Privont/Views/RealEstateAgentInfo/Signup.cshtml
+++ b/Privont/Views/RealEstateAgentInfo/Signup.cshtml
@@ -521,7 +521,7 @@
                     $("#RealEstateAgentId").val(data[1]);
                 },
                 error: function (x, e) {
-                    Swal.fire("", "Saving Error");
+                    Swal.fire("", "Email Sending Error","error");
                 },
                 async: false
             });
