--- a/Privont/Views/SMSSetting/Index.cshtml
+++ b/Privont/Views/SMSSetting/Index.cshtml
@@ -67,6 +67,43 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="box-body">
+                                <div class="form-horizontal">
+                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                    <br>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    <label>SMS format For Invitation</label>
+                                                </div>
+                                            </div>
+                                            <div class="row ">
+                                                <div class="col-md-8" style="padding-left:0px;">
+                                                    <small class="pull-right">(Message Fields)</small>
+                                                </div>
+                                                <div class="col-md-2 pull-right">
+                                                    <Select class="form-control" id="cmbsaleInvite">
+                                                        <option value="0">Select Field</option>
+                                                        <option value="[YourName]">YourName</option>
+                                                        <option value="[Name]">Name</option>
+                                                        <option value="[Link]">Link</option>
+                                                    </Select>
+                                                </div>
+                                                <div class="col-md-2 pull-right" style="padding-left:0px;margin-bottom:10px">
+                                                    <input type="button" class="btn-sm btn-primary" value="Add Field" id="btnAddSaleFieldsInvite" onclick="AddFieldtoSaleInvite()">
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-12">
+                                                    @Html.TextAreaFor(model => model.SMSDetailInvite, new { @class = "textarea", @style = "width: 100%; height: 100px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;" })
+                                                    @Html.ValidationMessageFor(model => model.SMSDetailInvite, "", new { @class = "text-danger" })
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -85,6 +122,16 @@
                         var currenttext = $("#SMSDetail").val();
                         currenttext = currenttext + $("#cmbsale").val();
                         $("#SMSDetail").val(currenttext);
+                    }
+                }
+                function AddFieldtoSaleInvite() {
+                    if ($("#cmbsaleInvite").val() == 0) {
+                        return;
+                    }
+                    else {
+                        var currenttext = $("#SMSDetailInvite").val();
+                        currenttext = currenttext + $("#cmbsaleInvite").val();
+                        $("#SMSDetailInvite").val(currenttext);
                     }
                 }
             </script>
