--- a/Privont/Views/LeadInfo/Index.cshtml
+++ b/Privont/Views/LeadInfo/Index.cshtml
@@ -241,7 +241,7 @@ Where LeadClaimInfo.LEadID= {item.LeadID}");
                                                     @if (item.isClaimLead == 0)
                                                     {
                                                         <button onclick="getClaimingLink(@item.LeadID)" id="Claimbtn_@item.LeadID" type="button" class="m-1 btn btn-success btn-sm  me-1">
-                                                            Get Claiming
+                                                            Get Claim
                                                         </button>
                                                     }
                                                     </td>
