--- a/Privont/Views/Shared/_Layout.cshtml
+++ b/Privont/Views/Shared/_Layout.cshtml
@@ -522,14 +522,14 @@
                             </div>
                         </div>
                     </div>
-                        <div class="row">
+                        <div class="row" style="display:none">
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <div class="pull-center inline">
                                         @Html.Label("Generated Link", htmlAttributes: new { @class = "form-label" })
                                         <div class="inline" style="display: flex;">
                                             @Html.Editor("GeneratedLink", new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                                            <button id="copyButton" class="btn btn-primary">Copy</button>
+                                            <button id="copyButton" class="btn btn-success">Copy</button>
                                         </div>
                                     </div>
                                 </div>
@@ -541,8 +541,8 @@
                             </div>
                         </div>
                         <div class="modal-footer pull-right">
-                            <button type="button" class="btn btn-danger float-end" data-bs-dismiss="modal">Close</button>
-                            <input type="button" onclick="GenerateLink()" value="Save & Generate Link" class="btn btn-primary" />
+                            @*<button type="button" class="btn btn-danger float-end" data-bs-dismiss="modal">Close</button>*@
+                            <input type="button" onclick="GenerateLink()" value="Invite" class="btn btn-primary" />
                         </div>
                     </div>
                 </div>
