--- a/Privont/Views/Shared/_Layout.cshtml
+++ b/Privont/Views/Shared/_Layout.cshtml
@@ -542,7 +542,7 @@
                         </div>
                         <div class="modal-footer pull-right">
                             @*<button type="button" class="btn btn-danger float-end" data-bs-dismiss="modal">Close</button>*@
-                            <input type="button" onclick="GenerateLink()" value="Invite" class="btn btn-primary" />
+                            <input type="button" onclick="GenerateLink()" value="Invite" class="btn btn-success" />
                         </div>
                     </div>
                 </div>
