--- a/Privont/Views/Shared/_Layout.cshtml
+++ b/Privont/Views/Shared/_Layout.cshtml
@@ -419,7 +419,7 @@
                     <li><a href="/LeadInfo/Index"><i data-feather="shopping-bag"></i>Lead</a></li>
                     <li><a href="/LenderInfo/FavouriteLender"><i data-feather="edit"></i>Favourite Lender</a></li>
                     <li><a href="/SMSSetting/Index"><i class="fa fa-cog"></i>SMS Setting</a></li>
-                    <li><a href="RealEstateAgentInfo/APIConfiguration"><i class="fa fa-key"></i>API Configuration</a></li>
+                    @*<li><a href="/RealEstateAgentInfo/APIConfiguration"><i class="fa fa-key"></i>API Configuration</a></li>*@
                 }
                 else if (General.UserType == 3)
                 {
