Work on 22 Nov 2023

--- a/Privont/Views/Home/MainIndex.cshtml
+++ b/Privont/Views/Home/MainIndex.cshtml
@@ -706,7 +706,7 @@
         .vc_custom_1579783998755 {
             margin-bottom: 0px !important;
             padding-bottom: 0px !important;
-            background: url(~/Browser_Components/MainIndex/assets/uploads/2023/bg2.jpg) !important;
+            background: url(Browser_Components/MainIndex/assets/uploads/2023/bg2.jpg) !important;
             background: transparent;
             background-position: center !important;
             background-repeat: no-repeat !important;
@@ -721,7 +721,7 @@
             top: 0px;
             left: 0px;
             opacity: 0.85;
-            background: linear-gradient(to bottom, #5e616f 0%, #121317 100%), url(~/Browser_Components/MainIndex/assets/uploads/2023/bg2.jpg) !important;
+            background: linear-gradient(to bottom, #5e616f 0%, #121317 100%), url(Browser_Components/MainIndex/assets/uploads/2023/bg2.jpg) !important;
             background-position: center !important;
             background-repeat: no-repeat !important;
             background-size: cover !important;
