--- a/Privont/Browser_Components/scss/_header.scss
+++ b/Privont/Browser_Components/scss/_header.scss
@@ -54,7 +54,7 @@
             border-radius: $default-border-radius;
             overflow: hidden;
           input[type="search"] {
-            background-color: #1b1f54;
+            background-color: #2E353C;
             color: $dark;
             font-size: 16px;
             padding-left: 20px;
@@ -72,7 +72,7 @@
             margin-left: 0px;
           }
           .btn {
-            background-color: #1b1f54;	
+            background-color: #2E353C;	
             color: $icon-lite-color;
             font-weight: 700;
             font-size: 18px;
