--- a/Privont/Browser_Components/scss/_variable.scss
+++ b/Privont/Browser_Components/scss/_variable.scss
@@ -113,7 +113,7 @@ $icon-lite-color: #5C607B;
 
 $wrapper: #eceff3;
 $wrapper-dark: #1c2e4c;
-$sidebar-theme: #2f3478;
+$sidebar-theme: #2E353C;
 
 /*Lite color*/
 $primary-lite:#d4ecff;
