--- a/Privont/Views/Shared/_Layout.cshtml
+++ b/Privont/Views/Shared/_Layout.cshtml
@@ -15,25 +15,32 @@
     <link rel="icon" href="../images/favicon.ico">
     <title>Privont - @ViewBag.Title</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,500;0,600;0,700;1,100;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <!-- Vendors Style-->
     <link href="~/Browser_Components/css/vendors_css.css" rel="stylesheet" />
     <!-- Style-->
     <link href="~/Browser_Components/css/horizontal-menu.css" rel="stylesheet" />
     <link href="~/Browser_Components/css/style.css" rel="stylesheet" />
     <link href="~/Browser_Components/css/skin_color.css" rel="stylesheet" />
+    <link href="~/Browser_Components/css/bootstrap_extend.css" rel="stylesheet" />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <style>
 
-        .main-header .app-menu .search-bx input[type="search"]
-        {
-            color:white;
+        .main-header .app-menu .search-bx input[type="search"] {
+            color: white;
         }
+
         .fs-30 {
             font-size: 1.7rem !important;
         }
+
         .table > tbody > tr > td, .table > tbody > tr > th {
-        padding:10px;
+            padding: 10px;
         }
+
         .table > thead > tr > th {
             padding: 12px;
         }
@@ -41,7 +48,6 @@
 </head>
 
 <body class="layout-top-nav light-skin theme-primary fixed">
-
     <div class="wrapper">
         <div id="loader"></div>
 
